fix: navigation z-index to 10

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -5,6 +5,7 @@
 .navigation {
   @include position-fixed;
   background-color: $c-pure-white;
+  z-index: $z-index-10;
 
   &__container {
     @include flex-row-space-between;
